# PluginFramework

./: CMakeLists.txt  LICENSE.txt  Makefile  README.md
plugin/: CMakeLists.txt  PluginManager.cpp  SharedLibrary.cpp
plugin/include/: ClientHook.h  Plugin.h  PluginAPI.h  PluginFramework.h  PluginInterface.h  PluginManager.h  PluginVersion.h  SharedLibrary.h
tests/plugin/: CMakeLists.txt  DeviceInterface.h  GraphicsInterface.h  TestPlugin.cpp  TestPluginDrivers.h  main.cpp
